# sillypoint

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
docs/: RESEARCH_LOG.md
eval/questions/: raw.txt
scripts/: explore_deliveries.py  explore_deliveries_more.py  materialize_combined.py  parse_all_matches.py  test_parser_srh.py  test_schema_breadth.py  test_schema_random.py
sillypoint/: config.py
sillypoint/ingestion/: cricsheet.py  parser.py  schema.py
